--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -13,6 +13,12 @@
   "author": "Patrick Dillon <dillon76@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
     "lodash.clone": "^4.5.0",
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
