--- a/packages/sms/package.json
+++ b/packages/sms/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
+    "@types/twilio": "^3.19.3",
     "dotenv": "^10.0.0",
-    "twilio": "^3.73.1"
+    "twilio": "^3.76.1"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
