--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^10.0.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
     "socket.io": "^3.0.4"
   },
   "devDependencies": {
     "@types/koa-bodyparser": "^4.3.4",
+    "@types/koa-static": "^4.0.2",
     "@types/koa__router": "^8.0.11"
   }
 }
