--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -19,13 +19,16 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
+    "canvas": "^2.9.1",
+    "konva": "^8.3.8",
     "lodash.clone": "^4.5.0",
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
     "next": "^12.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-draggable": "^4.4.4",
+    "react-konva": "^18.1.0",
     "react-resizable": "^3.0.4",
     "react-rnd": "^10.3.5",
     "socket.io-client": "^4.4.1",
