--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -32,6 +32,7 @@
     "react-resizable": "^3.0.4",
     "react-rnd": "^10.3.5",
     "socket.io-client": "^4.4.1",
-    "swr": "^1.2.1"
+    "swr": "^1.2.1",
+    "use-image": "^1.0.12"
   }
 }
