--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,10 +4,11 @@
 
   "compilerOptions": {
     "rootDir": "./src",
-    "lib": ["es2021"],
+    "lib": ["es2021", "DOM"],
     "module": "commonjs",
     "target": "es2021",
     "declaration": true,
+    "noImplicitAny": false,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
