--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -24,13 +24,11 @@
     "lodash.clone": "^4.5.0",
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.throttle": "^4.1.1",
     "next": "^12.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-draggable": "^4.4.4",
     "react-konva": "^18.1.0",
-    "react-resizable": "^3.0.4",
-    "react-rnd": "^10.3.5",
     "socket.io-client": "^4.4.1",
     "swr": "^1.2.1",
     "use-image": "^1.0.12"
