--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,8 +19,8 @@
     "socket.io-client": "^4.5.1"
   },
   "peerDependencies": {
-    "react": "^18.1.0",
-    "konva": "^8.3.8"
+    "konva": "^8.3.8",
+    "react": "^18.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178"
