--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "DOTENV_CONFIG_PATH=../../config/.env.server NODE_ENV=production node -r dotenv/config  ./dist/server",
     "dev": "DOTENV_CONFIG_PATH=../../config/.env.server ts-node-dev -r dotenv/config --ignore-watch=.next  --transpile-only  --files ./src/server.ts",
+    "debug": "DOTENV_CONFIG_PATH=../../config/.env.server ts-node-dev --inspect -r dotenv/config --ignore-watch=.next  --transpile-only  --files ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./dist && tsc"
   },
@@ -21,6 +22,7 @@
     "socket.io": "^3.0.4"
   },
   "devDependencies": {
+    "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.4",
     "@types/koa-static": "^4.0.2",
     "@types/koa__router": "^8.0.11"
