--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lightshow/core",
-  "version": "1.0.0-5",
+  "version": "1.1.1-0",
   "description": "Lightshow.js core library",
   "main": "dist/index.js",
   "repository": {
@@ -19,10 +19,12 @@
     "socket.io-client": "^4.5.1"
   },
   "peerDependencies": {
-    "konva": "^8.3.8",
     "react": "^18.1.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.178"
+    "@types/lodash": "^4.14.178",
+    "@types/react": "^18.0.15",
+    "konva": "^8.3.11",
+    "react": "^18.2.0"
   }
 }
