--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lightshow/core",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Lightshow.js core library",
   "main": "dist/index.js",
   "repository": {
@@ -13,6 +13,7 @@
     "build": "rm -rf ./dist && tsc --project ./tsconfig.json"
   },
   "dependencies": {
+    "bezier-easing": "^2.1.0",
     "lodash": "^4.17.21",
     "midi-player-js": "^2.0.13",
     "socket.io": "^3.0.4",
