--- a/packages/serial-dimmer-client/.env.example
+++ b/packages/serial-dimmer-client/.env.example
@@ -1,5 +1,5 @@
 # SERVER_URL=http://<your-server-host>:3000
 ### Map notes to channels
-# NOTE_PIN_MAPPINGS="C3:1,D3:2,E3:3,F3:4,Gb3:5,G3:6,A3:7,B3:8,C2:1,D2:2,E2:3,F2:4,Gb2:5,G2:6,A2:7,B2:8"
-### Notes that have dimmable control
-### DIMMABLE_RANGE="C3,D3,E3,F3,Gb3,G3,A3,B3"
+# CHANNELS=1,2,4,8,16,32,64,128
+### identifer
+# CLIENT_ID=dimmer-client
