--- a/packages/gpio-client/.env.example
+++ b/packages/gpio-client/.env.example
@@ -1,4 +1,5 @@
 # SERVER_URL=http://<your-server-host>:3000
-### Map notes to channels
-# NOTE_PIN_MAPPINGS="C3:1,D3:2,E3:3,F3:4,Gb3:5,G3:6,A3:7,B3:8"
+# pins
+# CHANNELS=1,2,3,4,5,6,7,8
+# CLIENT_ID=gpio-1
 
