--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,7 +19,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
-    "socket.io": "^3.0.4"
+    "socket.io": "^3.0.4",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@types/koa": "^2.13.5",
